[package]
name = "eters"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite"] }
actix-web = { version = "4.0.1", features = ["rustls"]}
log = "0.4"
pretty_env_logger = "0.4"
serde = { version = "1.0.137", features = ["derive"] }
validator = "0.15.0"
validator_derive = "0.15.0"
strum = "0.24"
strum_macros = "0.24"
sodiumoxide = "0.2.7"

